--- a/notebooks/classification.ipynb
+++ b/notebooks/classification.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "3d2d2fd2",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -15,6 +16,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f7cda6f5",
    "metadata": {},
    "source": [
     "# 0. Classification of Alzheimer's disease diagnosis\n",
@@ -29,6 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b1110017",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,6 +51,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2b8f3688",
    "metadata": {},
    "source": [
     "## Database\n",
@@ -61,24 +65,36 @@
     "The original images were preprocessed using [Clinica](http://www.clinica.run/): \n",
     "a software platform for clinical neuroimaging studies. \n",
     "Preprocessed images and other files are distributed in a tarball, run \n",
-    "the following command to download it."
+    "the following commands to download and extract them."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "55d2e4c3",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
    "outputs": [],
    "source": [
-    "gcontext = ssl.SSLContext()\n",
-    "dataseturl = \"https://aramislab.paris.inria.fr/files/data/databases/DL4MI/OASIS-1-dataset_pt_new.tar.gz\" \n",
-    "fstream = urllib.request.urlopen(dataseturl, context=gcontext)\n",
-    "tarfile = tarfile.open(fileobj=fstream, mode=\"r:gz\")\n",
-    "tarfile.extractall()"
+    "! wget --no-check-certificate --show-progress https://aramislab.paris.inria.fr/files/data/databases/DL4MI/OASIS-1-dataset_pt_new.tar.gz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f2f1b57",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "outputs": [],
+   "source": [
+    "! tar xf OASIS-1-dataset_pt_new.tar.gz -C ./"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "cd1ded34",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -102,6 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1291041f",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -117,6 +134,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ca70b36d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -134,6 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "336201f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,6 +196,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c2228b1c",
    "metadata": {},
    "source": [
     "## Preprocessing\n",
@@ -191,15 +211,14 @@
     "3. Conversion to tensor format (.pt).\n",
     "\n",
     "\n",
-    "As mentioned above, to obtain the preprocessed images, we used some Clinica's\n",
-    "pipelines in order to: \n",
+    "As mentioned above, to obtain the preprocessed images, we used some pipelines provided \n",
+    "by Clinica and ClinicaDL in order to: \n",
     "\n",
     "1. Convert the original dataset to BIDS format ([`clinica convert\n",
     "oasis-2-bids`](http://www.clinica.run/doc/Converters/OASIS2BIDS/)).\n",
     "2. Get the non-linear registration and segmentation of grey mater (pipeline\n",
     "[`t1-volume`](http://www.clinica.run/doc/Pipelines/T1_Volume/)).\n",
-    "3. Obtain the preprocessed images in tensor format (pipeline\n",
-    "[`deeplearning-prepare-data`](https://aramislab.paris.inria.fr/clinica/docs/public/latest/Pipelines/DeepLearning_PrepareData/)).\n",
+    "3. Obtain the preprocessed images in tensor format ([tensor extraction using ClinicaDL, `clinicadl extract`](https://clinicadl.readthedocs.io/en/stable/Preprocessing/Extract/)).\n",
     "\n",
     "\n",
     "The preprocessed images are store in the [CAPS\n",
@@ -211,6 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "222acd5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,6 +288,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7ba6eac9",
    "metadata": {},
    "source": [
     "To facilitate the training and avoid overfitting due to the limited amount of\n",
@@ -286,6 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7857b615",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,6 +358,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d64a92c2",
    "metadata": {},
    "source": [
     "## Visualization\n",
@@ -346,6 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4a2950ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,11 +392,11 @@
     "    for i, slice in enumerate(slices):\n",
     "        axes[i].imshow(slice.T, cmap=\"gray\", origin=\"lower\")\n",
     "\n",
-    "slice_0 = raw_np[80, :, :]\n",
-    "slice_1 = raw_np[:, 130, :]\n",
-    "slice_2 = raw_np[:, :, 60]\n",
-    "show_slices([rotate(slice_0, 90), rotate(slice_1, 90), slice_2])\n",
-    "plt.suptitle(f'Slice of raw image of subject {subject}')\n",
+    "slice_0 = raw_np[:, :, 78]\n",
+    "slice_1 = raw_np[122, :, :]\n",
+    "slice_2 = raw_np[:, 173, :]\n",
+    "show_slices([slice_0, rotate(slice_1, 90), rotate(slice_2, 90)])\n",
+    "plt.suptitle(f'Slices of raw image of subject {subject}')\n",
     "plt.show()\n",
     "\n",
     "slice_0 = preprocessed_pt[0, 60, :, :]\n",
@@ -393,6 +417,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8e22ddf0",
    "metadata": {},
    "source": [
     "# 1. Cross-validation\n",
@@ -407,6 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "651d6767",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -424,6 +450,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8adc260b",
    "metadata": {},
    "source": [
     "# 2. Model\n",
@@ -435,6 +462,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "770b11f9",
    "metadata": {},
    "source": [
     "## Reminder on CNN layers\n",
@@ -446,6 +474,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a1791ab7",
    "metadata": {},
    "source": [
     "### Feature maps\n",
@@ -463,6 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7801ecab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,6 +511,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "47ae5141",
    "metadata": {},
    "source": [
     "### Convolutions (`nn.Conv3d`)\n",
@@ -520,6 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3b7fe245",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,6 +565,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "467fe6ee",
    "metadata": {},
    "source": [
     "### Batch Normalization (`nn.BatchNorm3d`)\n",
@@ -555,6 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "91e646cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,6 +600,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "153bf26a",
    "metadata": {},
    "source": [
     "### Activation function (`nn.LeakyReLU`)\n",
@@ -582,6 +617,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8dc7e166",
    "metadata": {},
    "source": [
     "### Pooling function (`PadMaxPool3d`)\n",
@@ -605,6 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9b6d781a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -653,6 +690,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f44767b3",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -669,6 +707,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "537712c6",
    "metadata": {},
    "source": [
     "### Dropout (`nn.Dropout`) \n",
@@ -683,6 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ac25d2d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,6 +736,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "655238f4",
    "metadata": {},
    "source": [
     "### Fully-Connected Layers (`nn.Linear`)\n",
@@ -711,6 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cef44c86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,6 +764,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6cc47c16",
    "metadata": {},
    "source": [
     "## TODO Network design\n",
@@ -743,6 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "85e50536",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -792,6 +836,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9347ba35",
    "metadata": {},
    "source": [
     "# 3. Train & Test\n",
@@ -818,6 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0696010e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,6 +986,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f536881e",
    "metadata": {},
    "source": [
     "## Train Classification with Left HC\n",
@@ -963,6 +1010,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4c478c5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -995,6 +1043,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "210f8073",
    "metadata": {},
    "source": [
     "If you obtained about 0.85 or more of balanced accuracy, there may be\n",
@@ -1014,6 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1e70ec24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,6 +1074,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9d29380d",
    "metadata": {},
    "source": [
     "If the accuracy on old participants is very different from the one you obtained before,\n",
@@ -1033,6 +1084,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1c8eb2f7",
    "metadata": {},
    "source": [
     "## Train Classification with Right HC\n",
@@ -1046,6 +1098,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e9da1735",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,6 +1128,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "aa8d7289",
    "metadata": {},
    "source": [
     "## Soft voting\n",
@@ -1085,6 +1139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "73559956",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,6 +1164,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2308e0ff",
    "metadata": {},
    "source": [
     "Keep in mind that the validation set was used to set the hyperparameters\n",
@@ -1119,6 +1175,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fb4b0edc",
    "metadata": {},
    "source": [
     "# 4. Clustering on AD & CN populations\n",
@@ -1134,6 +1191,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8bca3c12",
    "metadata": {},
    "source": [
     "## Model\n",
@@ -1150,6 +1208,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "df7565f7",
    "metadata": {},
    "source": [
     "You will find below `CropMaxUnpool3d` the transposed version of\n",
@@ -1159,6 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3d7a18e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1180,6 +1240,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ea4e7744",
    "metadata": {},
    "source": [
     "To facilitate the reconstruction process, the pooling layers in the encoder\n",
@@ -1193,6 +1254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "16005c63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1272,6 +1334,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9a99b493",
    "metadata": {},
    "source": [
     "## Train Autoencoder\n",
@@ -1286,6 +1349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1b79bc4a",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -1368,6 +1432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ef422b4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1384,6 +1449,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "23833254",
    "metadata": {},
    "source": [
     "## Visualization\n",
@@ -1395,6 +1461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a7b07800",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1429,6 +1496,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7bc3875e",
    "metadata": {},
    "source": [
     "## Clustering\n",
@@ -1445,6 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "99869f1c",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -1476,6 +1545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d83b497f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1485,6 +1555,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7f3bc67d",
    "metadata": {},
    "source": [
     "Then the model will fit the training codes and build two clusters. The labels\n",
@@ -1494,6 +1565,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "02cf64dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1510,6 +1582,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f7f9495e",
    "metadata": {},
    "source": [
     "The accuracy may not be very good, this could mean that the framework\n",
@@ -1523,6 +1596,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b83ba0b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1547,6 +1621,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "804647bd",
    "metadata": {},
    "source": [
     "You can try to improve this clustering by adding the codes obtained on the\n",
@@ -1558,6 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a2a18155",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1574,5 +1650,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
